--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -36,6 +36,19 @@
       grid-template-columns: 1.3fr 1fr;
     }
 
+    #deepViewBody .section-title {
+      color: #eaf5ff;
+      font-weight: 800;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
+    }
+
+    #deepViewBody .deep-exec-text {
+      color: #f2f8ff;
+      font-weight: 500;
+      font-size: 0.98rem;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    }
+
     .media-sidecar {
       --media-sidecar-width: 340px;
       --media-sidecar-gap: 1px;
