--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -130,7 +130,7 @@
     /* Hero Search Section */
     .hero-section {
       text-align: center;
-      margin-top: 15vh;
+      margin-top: 3.2rem;
       animation: fadeIn 1s ease-out;
     }
 
